[gd_scene load_steps=55 format=3 uid="uid://rqhf0iqds60a"]

[ext_resource type="Script" uid="uid://bb40tbojixkd4" path="res://Scripts/Globals/sfx_autoload.gd" id="1_70o3o"]
[ext_resource type="AudioStream" uid="uid://brrvojqhfr8nq" path="res://Assets/audio/sfx/sfx_ui_hover.wav" id="2_01q88"]
[ext_resource type="AudioStream" uid="uid://cg40ialrt2gr6" path="res://Assets/audio/sfx/sfx_ui_select.wav" id="3_koym5"]
[ext_resource type="AudioStream" uid="uid://ykkg36s0m56p" path="res://Assets/audio/sfx/sfx_bottleSlosh1.wav" id="4_pdexn"]
[ext_resource type="AudioStream" uid="uid://yw067ypjq28b" path="res://Assets/audio/sfx/sfx_bottleSlosh2.wav" id="5_hk3h8"]
[ext_resource type="AudioStream" uid="uid://8h3q02vos772" path="res://Assets/audio/sfx/sfx_bottleSlosh3.wav" id="6_gf2ls"]
[ext_resource type="AudioStream" uid="uid://ln2vdk7poy8x" path="res://Assets/audio/sfx/sfx_bottleSlosh4.wav" id="7_oji5u"]
[ext_resource type="AudioStream" uid="uid://bwfud3yb4h6i2" path="res://Assets/audio/sfx/sfx_burning1.wav" id="8_das88"]
[ext_resource type="AudioStream" uid="uid://cki57r7o02yup" path="res://Assets/audio/sfx/sfx_burning2.wav" id="9_6ay6m"]
[ext_resource type="AudioStream" uid="uid://dsl335v8t0jxe" path="res://Assets/audio/sfx/sfx_burning3.wav" id="10_1x5yr"]
[ext_resource type="AudioStream" uid="uid://b1kwpn14l8upa" path="res://Assets/audio/sfx/sfx_burning4.wav" id="11_pqd2d"]
[ext_resource type="AudioStream" uid="uid://bpmfahlf721j2" path="res://Assets/audio/music/music_rhythm_192bpm_loop.ogg" id="12_r2ikn"]
[ext_resource type="AudioStream" uid="uid://nnqyabjkbkvv" path="res://Assets/audio/music/music_melody_192bpm_loop.ogg" id="13_oi88a"]
[ext_resource type="AudioStream" uid="uid://2tx6r6eu1cbj" path="res://Assets/audio/sfx/sfx_cards_draw1.wav" id="14_8lxfg"]
[ext_resource type="AudioStream" uid="uid://dnuc0fgts6t4e" path="res://Assets/audio/sfx/sfx_cards_draw2.wav" id="15_1bien"]
[ext_resource type="AudioStream" uid="uid://ddj6u6he33y62" path="res://Assets/audio/sfx/sfx_cards_draw3.wav" id="16_pxq2t"]
[ext_resource type="AudioStream" uid="uid://bk5inegl7x07e" path="res://Assets/audio/sfx/sfx_cards_place1.wav" id="17_2wsgv"]
[ext_resource type="AudioStream" uid="uid://c1bfqixtqhk0j" path="res://Assets/audio/sfx/sfx_cards_place2.wav" id="18_kkoe8"]
[ext_resource type="AudioStream" uid="uid://mcwhdfaiyuya" path="res://Assets/audio/sfx/sfx_cards_place3.wav" id="19_t1b4h"]
[ext_resource type="AudioStream" uid="uid://hkwyv01whnjr" path="res://Assets/audio/sfx/sfx_cards_place4.wav" id="20_1vv2q"]
[ext_resource type="AudioStream" uid="uid://d02jl21ydcma8" path="res://Assets/audio/sfx/sfx_cards_shuffle1.wav" id="21_mpf7n"]
[ext_resource type="AudioStream" uid="uid://dnbb7fifcvih0" path="res://Assets/audio/sfx/sfx_cards_shuffle2.wav" id="22_estga"]
[ext_resource type="AudioStream" uid="uid://bk40n3dxct62q" path="res://Assets/audio/sfx/sfx_cards_shuffle3.wav" id="23_silyf"]
[ext_resource type="AudioStream" uid="uid://bdrvlcakpm22s" path="res://Assets/audio/sfx/sfx_cards_shuffle4.wav" id="24_hnxy1"]
[ext_resource type="AudioStream" uid="uid://th0ymwu3xtf1" path="res://Assets/audio/sfx/sfx_chips1.wav" id="25_3kx68"]
[ext_resource type="AudioStream" uid="uid://c3w1m6l135y05" path="res://Assets/audio/sfx/sfx_chips2.wav" id="26_h4d31"]
[ext_resource type="AudioStream" uid="uid://rchcjuvpabaa" path="res://Assets/audio/sfx/sfx_chips3.wav" id="27_4pl5q"]
[ext_resource type="AudioStream" uid="uid://dc16kwn6iuv0n" path="res://Assets/audio/sfx/sfx_chips4.wav" id="28_e7grw"]
[ext_resource type="AudioStream" uid="uid://cin3hqwak7h66" path="res://Assets/audio/sfx/sfx_chipsClear1.wav" id="29_e7grw"]
[ext_resource type="AudioStream" uid="uid://d0ecvqymn5udy" path="res://Assets/audio/sfx/sfx_chipsClear2.wav" id="30_kwoya"]
[ext_resource type="AudioStream" uid="uid://7xbuell4pw6p" path="res://Assets/audio/sfx/sfx_chipsClear3.wav" id="31_saxdr"]
[ext_resource type="AudioStream" uid="uid://bsd243s3kqhi0" path="res://Assets/audio/sfx/sfx_consumeDrink1.wav" id="32_gcm6c"]
[ext_resource type="AudioStream" uid="uid://bmtj5wauqmcbx" path="res://Assets/audio/sfx/sfx_consumeDrink2.wav" id="33_iovhh"]
[ext_resource type="AudioStream" uid="uid://cx0x6ctyhd02l" path="res://Assets/audio/sfx/sfx_consumeDrink3.wav" id="34_no2lo"]
[ext_resource type="AudioStream" uid="uid://dibluncgc5mmv" path="res://Assets/audio/sfx/sfx_consumeDrink4.wav" id="35_f7kk6"]
[ext_resource type="AudioStream" uid="uid://behhimhfxhdev" path="res://Assets/audio/sfx/sfx_devil_laugh_1.mp3" id="36_la78s"]
[ext_resource type="AudioStream" uid="uid://bbi7xpm1p4dtg" path="res://Assets/audio/sfx/sfx_devil_laugh_2.mp3" id="37_rjdmo"]
[ext_resource type="AudioStream" uid="uid://bu52pjw8edtdk" path="res://Assets/audio/sfx/sfx_devil_laugh_3.mp3" id="38_3ap64"]
[ext_resource type="AudioStream" uid="uid://cn3laa4nlvub2" path="res://Assets/audio/sfx/sfx_devil_laugh_4.mp3" id="39_xa82s"]
[ext_resource type="AudioStream" uid="uid://1u753ggsfu16" path="res://Assets/audio/sfx/sfx_tableButton.wav" id="40_rjdmo"]
[ext_resource type="AudioStream" uid="uid://chb70r6rgage4" path="res://Assets/audio/sfx/sfx_playerTurn1.wav" id="41_6f38i"]
[ext_resource type="AudioStream" uid="uid://di6dis8dhrf2s" path="res://Assets/audio/sfx/sfx_playerTurn2.wav" id="42_g12tj"]
[ext_resource type="AudioStream" uid="uid://m3oxbuvq777j" path="res://Assets/audio/sfx/sfx_playerTurn3.wav" id="43_n7cfq"]
[ext_resource type="AudioStream" uid="uid://dpwwi6d305dt" path="res://Assets/audio/sfx/sfx_playerTurn4.wav" id="44_8w1o8"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kysf4"]
streams_count = 4
stream_0/stream = ExtResource("4_pdexn")
stream_1/stream = ExtResource("5_hk3h8")
stream_2/stream = ExtResource("6_gf2ls")
stream_3/stream = ExtResource("7_oji5u")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gbtxh"]
streams_count = 4
stream_0/stream = ExtResource("8_das88")
stream_1/stream = ExtResource("9_6ay6m")
stream_2/stream = ExtResource("10_1x5yr")
stream_3/stream = ExtResource("11_pqd2d")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_r2ikn"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 3
stream_0/stream = ExtResource("14_8lxfg")
stream_1/stream = ExtResource("15_1bien")
stream_2/stream = ExtResource("16_pxq2t")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mpf7n"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 4
stream_0/stream = ExtResource("17_2wsgv")
stream_1/stream = ExtResource("18_kkoe8")
stream_2/stream = ExtResource("19_t1b4h")
stream_3/stream = ExtResource("20_1vv2q")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3kx68"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 4
stream_0/stream = ExtResource("21_mpf7n")
stream_1/stream = ExtResource("22_estga")
stream_2/stream = ExtResource("23_silyf")
stream_3/stream = ExtResource("24_hnxy1")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_estga"]
streams_count = 4
stream_0/stream = ExtResource("25_3kx68")
stream_1/stream = ExtResource("26_h4d31")
stream_2/stream = ExtResource("27_4pl5q")
stream_3/stream = ExtResource("28_e7grw")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h8u5w"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 3
stream_0/stream = ExtResource("29_e7grw")
stream_1/stream = ExtResource("30_kwoya")
stream_2/stream = ExtResource("31_saxdr")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_e7grw"]
random_pitch = 1.05
random_volume_offset_db = 2.0
streams_count = 4
stream_0/stream = ExtResource("32_gcm6c")
stream_1/stream = ExtResource("33_iovhh")
stream_2/stream = ExtResource("34_no2lo")
stream_3/stream = ExtResource("35_f7kk6")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_p4vxy"]
streams_count = 4
stream_0/stream = ExtResource("36_la78s")
stream_1/stream = ExtResource("37_rjdmo")
stream_2/stream = ExtResource("38_3ap64")
stream_3/stream = ExtResource("39_xa82s")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pior2"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 4
stream_0/stream = ExtResource("41_6f38i")
stream_1/stream = ExtResource("42_g12tj")
stream_2/stream = ExtResource("43_n7cfq")
stream_3/stream = ExtResource("44_8w1o8")

[node name="SfxAutoload" type="Node2D"]
script = ExtResource("1_70o3o")

[node name="ButtonHover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_01q88")
bus = &"sfx"

[node name="ButtonPressed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_koym5")
bus = &"sfx"

[node name="sfx_bottle" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_kysf4")
bus = &"sfx"

[node name="sfx_burning" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_gbtxh")
bus = &"sfx"

[node name="music_rhythm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_r2ikn")
autoplay = true
bus = &"music"
parameters/looping = true

[node name="music_melody" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_oi88a")
autoplay = true
bus = &"music"
parameters/looping = true

[node name="draw_card" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_r2ikn")
bus = &"sfx"

[node name="place_card" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_mpf7n")
bus = &"sfx"

[node name="shuffle_cards" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_3kx68")
bus = &"sfx"

[node name="place_chips" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_estga")
bus = &"sfx"

[node name="clear_chips" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_h8u5w")
bus = &"sfx"

[node name="consume_drink" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_e7grw")

[node name="dealer_cigar" type="AudioStreamPlayer" parent="."]
bus = &"sfx"

[node name="dealer_laugh" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_p4vxy")
bus = &"sfx"

[node name="table_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("40_rjdmo")
bus = &"sfx"

[node name="player_rotate" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_pior2")
bus = &"sfx"
